# playing-with-llms

./: .gitignore  README.md  pyproject.toml
notebooks/: Extracting_tables_GPT4.ipynb  Trying_DeepSeek_LLM_67B_chat_AWQ.ipynb  Trying_Elyza7b.ipynb  Trying_Gemini_1_5_pro.ipynb  Trying_Gemini_API.ipynb  Trying_HuggingFaceH4_zephyr_7b_alpha.ipynb  Trying_Instructor_Library.ipynb  Trying_Langchain_RAG_with_Elyza_instruct_7b.ipynb  Trying_Langchain_RAG_with_Elyza_instruct_7b_with_various_emb_models.ipynb  Trying_Mistral_Instruct.ipynb  Trying_PLaMo.ipynb  Trying_Phi_2.ipynb  Trying_Swallow_13B_instruct.ipynb  Trying_SynthIA_7B_v1_3.ipynb  Trying_Xwin_70b.ipynb  Trying_augmxnt_shisa_7b_v1.ipynb  Trying_chronos-t5.ipynb  Trying_cyberagent_calm2_7b_chat.ipynb  Trying_line_corporation_japanese_large_lm_3_6b.ipynb  Trying_llm_jp_llm_jp_13b_instruct_full_dolly_oasst_v1_0.ipynb  Trying_openchat_openchat_3_5_1210.ipynb  Trying_qwen7b.ipynb  Trying_rinna_bilingual_gpt_neox_4b_instruction_sft.ipynb  Trying_stabilityai_japanese_stablelm_base_alpha_7b_and_stabilityai_japanese_stablelm_instruct_alpha_7b.ipynb  Trying_weblab10b.ipynb  firecrawl_extract.ipynb
notes/: API_timeouts_openai.md  Downloading_Llama_CPP.md  Extracting_tables_GPT4.md  Paper_distilling_step_by_step.md  Trying_Anthropic_API.md  Trying_DeepSeek_LLM_67B_chat_AWQ.md  Trying_Gemini_1_5_pro.md  Trying_Gemini_API.md  Trying_HuggingFaceH4_zephyr_7b_alpha.md  Trying_Intsructor.md  Trying_Langchain_RAG_with_Elyza_instruct_7b.md  Trying_Langchain_RAG_with_Elyza_instruct_7b_with_various_emb_models.md  Trying_Mistral_Instruct.md  (+15 more)
(+8 files in other folders)
